<resources>
    <string name="app_name">Leave Requests Management</string>
    <string name="app_title">Smart Leave</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="no_account">Don\'t have account?</string>
    <string name="create_new_account">Create a new account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="profile">Profile</string>
    <string name="leave_request">Leave Request</string>
    <string name="leave_requests">Leave Requests</string>
    <string name="chat">Chat</string>
    <string name="send_attachment">Send an Attachment</string>
    <string name="my_attachments">My Attachments</string>
    <string name="my_leave_requests">My Leave Requests</string>
    <string name="others">Others</string>
    <string name="status">Status</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="pending">Pending</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="username_sample">username@example.com</string>
    <string name="employee_name">Employee 123</string>
    <string name="from">From :</string>
    <string name="to">To :</string>
    <string name="fill_leave_request">Fill in a Leave Request</string>
    <string name="start_date">Starting Date (Ex: 01/01/2022)</string>
    <string name="end_date">Ending Date (Ex: 01/01/2022)</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="messages">Messages</string>
    <string name="message">Message</string>
    <string name="title">Title</string>
    <string name="choose_file">Choose File</string>
    <string name="file_name">Enter File Name</string>
    <string name="upload">Upload</string>
    <string name="employees">Employees</string>
    <string name="employee">Employee</string>
    <string name="started_work_at">Started work at</string>
    <string name="attachments">Attachments</string>
    <string name="welcome">Welcome</string>
    <string name="mission">Mission</string>
    <string name="phone_nb">Phone Number</string>
    <string name="add_new_employee">Add a New Employee</string>
    <string name="update_employee">Update Employee Data</string>
    <string name="welcome_to">Welcome to</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="leave_req_description">Keep track of all your Leave Requests here...</string>
    <string name="attachment_description">Here you find all your attachments you have previously uploaded...</string>
    <string name="search_colleagues">Search for colleagues...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset_password">Reset Password</string>
</resources>