<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/profile"
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_profile"
        />

    <item android:title="@string/leave_request"
        android:id="@+id/menu_leave_req"
        android:icon="@drawable/ic_leave"
        />

    <item android:title="@string/chat"
        android:id="@+id/menu_chat"
        android:icon="@drawable/ic_message"
        />

    <item android:title="@string/send_attachment"
        android:id="@+id/menu_attachment"
        android:icon="@drawable/ic_attachment"
        />

    <item android:title="@string/others">
        <menu>
            <item android:title="@string/settings"
                android:id="@+id/menu_settings"
                android:icon="@drawable/ic_settings"/>

            <item android:title="@string/logout"
                android:id="@+id/menu_logout"
                android:icon="@drawable/ic_logout"/>
        </menu>
    </item>
</menu>