<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".employee.empHome.fragments.LeaveReqFragment"
android:background="@color/bgLite">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fill_leave_request"
            android:textColor="#333385"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/from"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:hint="@string/start_date"
            android:textColor="@color/black"
            android:textColorHint="#A7A7A7"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="#EAEAEE">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_start_date"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/to"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:hint="@string/end_date"
            android:textColor="@color/black"
            android:textColorHint="#A7A7A7"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="#EAEAEE">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_end_date"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="65dp">

            <Button
                android:id="@+id/cancel_leave_req_btn"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/cancel"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="#FF5722"
                android:layout_marginEnd="5dp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/save_leave_req_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/save"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="#333385"
                app:cornerRadius="20dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>