<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgLite"
    tools:context=".employee.empHome.fragments.LeaveReqFragment">

    <LinearLayout
        android:id="@+id/add_emp_layoutToolBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/purple_500"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="3"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_emp_layoutToolBar">

        <TextView
            android:id="@+id/newEmp_add_updateTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_employee"
            android:textAlignment="center"
            android:textColor="#333385"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:hint="@string/first_name"
            android:textColor="@color/black"
            android:textColorHint="#A7A7A7"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="#EAEAEE">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newEmp_first_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="15sp"

                tools:ignore="TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:hint="@string/last_name"
            android:textColor="@color/black"
            android:textColorHint="#A7A7A7"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="#EAEAEE">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newEmp_last_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="15sp"

                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newEmp_username_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:hint="@string/username"
            android:textColor="@color/black"
            android:textColorHint="#A7A7A7"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="#EAEAEE">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newEmp_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="15sp"

                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newEmp_password_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/gray"
            android:textColor="@color/black"
            android:textColorHint="#A7A7A7"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="#EAEAEE">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newEmp_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="15sp"

                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:hint="@string/mission"
            android:textColor="@color/black"
            android:textColorHint="#A7A7A7"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="#EAEAEE">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newEmp_mission"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="15sp"

                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:hint="@string/phone_nb"
            android:textColor="@color/black"
            android:textColorHint="#A7A7A7"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="#EAEAEE">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newEmp_phone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="15sp"

                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:hint="@string/start_date"
            android:textColor="@color/black"
            android:textColorHint="#A7A7A7"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="#EAEAEE">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newEmp_start_date"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="15sp"

                tools:ignore="TouchTargetSizeCheck" />
            
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/newEmp_cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="#FF5722"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/newEmp_add_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/add"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="#333385"
                app:cornerRadius="20dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>