<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bgLite"
    tools:context=".chat.ChatScreenActivity">

    <RelativeLayout
        android:id="@+id/relativeLayoutTop"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500">

        <ImageView
            android:id="@+id/chat_back_arrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_back_arrow"/>

        <TextView
            android:id="@+id/emp_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/employee_name"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/emp_profile_pic"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/round_back_theme_10"
            android:src="@drawable/ic_profile" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutBottom"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <EditText
                android:id="@+id/message_title"
                android:hint="@string/title"
                android:textColor="@color/white"
                android:textColorHint="#A7A7A7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="85dp"
                />

            <EditText
                android:id="@+id/message_content"
                android:hint="@string/message"
                android:textColor="@color/white"
                android:textColorHint="#A7A7A7"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="85dp"
                />


        </LinearLayout>

        <ImageView
            android:id="@+id/btn_send_message"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:src="@drawable/send" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayoutTop"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayoutBottom"
        />

</androidx.constraintlayout.widget.ConstraintLayout>